src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_56.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Background="White">

<!--Text Foreground="NineGrid avalon.png  100 1 100 1" FontSize="72">Hel</Text-->
<TextBlock FontSize="72">Hel
<TextBlock.Foreground>
			<ImageBrush 
				TileMode="None"
				Stretch="None" 
				AlignmentX="Left" 
				AlignmentY="Top"
				 />
<TextBlock.Foreground/>
</TextBlock>
</Canvas>
</Page>
